--- a/api/qsharp/Microsoft.Quantum.Chemistry.yml
+++ b/api/qsharp/Microsoft.Quantum.Chemistry.yml
@@ -3,23 +3,23 @@ uid: microsoft.quantum.chemistry
 name: Microsoft.Quantum.Chemistry
 functions:
 - uid: microsoft.quantum.chemistry.htermstogenidx
-  summary: 将索引 `HTerm[]` 数据格式转换为 GeneratorIndex 的 Hamiltonian 项。
+  summary: 将`HTerm[]`数据格式的 Hamiltonian 术语的索引转换为 GeneratorIndex。
 - uid: microsoft.quantum.chemistry.htermstogensys
-  summary: 将 `HTerm[]` 数据格式的 Hamiltonian 转换为 GeneratorSystem。
+  summary: 将`HTerm[]`数据格式的 Hamiltonian 转换为 GeneratorSystem。
 - uid: microsoft.quantum.chemistry.htermtogenidx
-  summary: 将 `HTerm` 数据格式的 Hamiltonian 术语转换为 GeneratorIndex。
+  summary: 将`HTerm`数据格式的 Hamiltonian 术语转换为 GeneratorIndex。
 - uid: microsoft.quantum.chemistry.isnotzero
-  summary: 检查 `Double` 数字是否不约为零。
+  summary: 检查`Double`数字是否不约为零。
 newtypes:
 - uid: microsoft.quantum.chemistry.hterm
   summary: >-
-    从C#传递给 Q # 的数据格式，用于表示 Hamiltonian 的一个术语。
+    从 c # 传递到 Q # 以表示 Hamiltonian 的术语的数据格式。
 
     表示的数据的含义取决于接收数据的算法。
 metadata:
-  ms.openlocfilehash: 78d6e9f54c25f9d1a6af32c157d23069b8a4872b
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: fda6e5c8daebeae115046771e85e0e49d057e666
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73210910"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677014"
