--- a/api/qsharp/microsoft.quantum.arithmetic.multiplybymodularinteger.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.multiplybymodularinteger.yml
@@ -7,7 +7,7 @@ summary: >-
   对 qubit 寄存器上的整数常量执行模块化乘法运算。
 
 
-  让我们通过 $a $ $N $ 和 `constMultiplier` 来表示 `modulus`。
+  让我们通过`modulus` $N $ 和`constMultiplier` $a $ 来表示。
 
   然后，此操作实现由以下映射定义的单一操作：对于每个 $0 $ 和 $N-$1 $y $ $ $ \begin{align} \ket{y} \mapsto \ket{（a \cdot y） \operatorname{mod} N} \end{align} $ $。
 remarks: >-
@@ -23,7 +23,7 @@ input:
     isPrimitive: true
     uid: Int
   - name: modulus
-    summary: 乘法运算执行取模 `modulus`。
+    summary: 乘法运算执行取模`modulus`运算。
     isPrimitive: true
     uid: Int
   - name: multiplier
@@ -41,9 +41,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 49d46d1dda5afaf4a35667ec98d24aeb51beba1f
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 48a0f19334f65a6b80003d90dc4dc216dc8dee98
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76871373"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82676736"
