--- a/api/qsharp/microsoft.quantum.arrays.exclude.yml
+++ b/api/qsharp/microsoft.quantum.arrays.exclude.yml
@@ -31,7 +31,7 @@ input:
 output:
   content: "'T[]"
   types:
-  - summary: 数组 `output` `output[0]` 是 `array` 的第一个元素，该元素的索引未出现在 `remove`中，因此 `output[1]` 为第二个这样的元素，依此类推。
+  - summary: 一个数组`output` ，它`output[0]`是`array`其索引未出现在中`remove`的第一个元素，这`output[1]`是第二个这样的元素，依此类推。
     isArray: true
     uid: "'T"
     isLocal: true
@@ -39,9 +39,9 @@ typeParameters:
 - uid: "'T"
   summary: 数组元素的类型。
 metadata:
-  ms.openlocfilehash: 624021333e156a4da58509186bffa3074cf44f85
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 715610f2e8d0932a22d6dfdd0232e981a495fd6f
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73214293"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82676479"
