--- a/api/qsharp/Microsoft.Quantum.Chemistry.JordanWigner.yml
+++ b/api/qsharp/Microsoft.Quantum.Chemistry.JordanWigner.yml
@@ -3,19 +3,19 @@ uid: microsoft.quantum.chemistry.jordanwigner
 name: Microsoft.Quantum.Chemistry.JordanWigner
 functions:
 - uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerblockencodinggeneratorsystem
-  summary: 将 `JWOptimizedHTerms` 描述的 Hamiltonian 转换为 Pauli `GeneratorIndex`形式表示的一个 `GeneratorSystem`。
+  summary: 将描述的 Hamiltonian 转换`JWOptimizedHTerms`为 Pauli `GeneratorSystem` `GeneratorIndex`的表示形式。
 - uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerclusteroperatorevolutionset
   summary: 将 dynamical 生成器表示为一组 simulatable 入口和 JordanWigner 中的扩展。
 - uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerclusteroperatorgeneratorsystem
-  summary: 将 `JWOptimizedHTerms` 描述的 Hamiltonian 转换为 `GeneratorSystem` 在此文件中定义的 `GeneratorIndex` 约定。
+  summary: 将描述的 Hamiltonian 转换`JWOptimizedHTerms`为用`GeneratorSystem`此文件中定义的`GeneratorIndex`约定表示的。
 - uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerfermionevolutionset
   summary: 将 dynamical 生成器表示为一组 simulatable 入口和 JordanWigner 中的扩展。
 - uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerfermionfunction
   summary: 将 dynamical 生成器表示为一组 simulatable 入口和 JordanWigner 中的扩展。
 - uid: microsoft.quantum.chemistry.jordanwigner.jordanwignergeneratorsystem
-  summary: 将 `JWOptimizedHTerms` 描述的 Hamiltonian 转换为 `GeneratorSystem` 在此文件中定义的 `GeneratorIndex` 约定。
+  summary: 将描述的 Hamiltonian 转换`JWOptimizedHTerms`为用`GeneratorSystem`此文件中定义的`GeneratorIndex`约定表示的。
 - uid: microsoft.quantum.chemistry.jordanwigner.optimizedblockencodinggeneratorsystem
-  summary: 将 `JWOptimizedHTerms` 描述的 Hamiltonian 转换为 Pauli `GeneratorIndex`形式表示的一个 `GeneratorSystem`。
+  summary: 将描述的 Hamiltonian 转换`JWOptimizedHTerms`为 Pauli `GeneratorSystem` `GeneratorIndex`的表示形式。
 - uid: microsoft.quantum.chemistry.jordanwigner.optimizedqubitizationoracle
   summary: 返回 T-sql 优化 Qubitization 操作和运行该操作所需的参数。
 - uid: microsoft.quantum.chemistry.jordanwigner.qubitizationoracle
@@ -24,7 +24,7 @@ functions:
   summary: 返回 Trotter 步骤操作和运行该操作所需的参数。
 operations:
 - uid: microsoft.quantum.chemistry.jordanwigner.optimizedbexy
-  summary: 一个单一 $U $，它在 $ （X ^ {z + 1}\_pY ^ {z}\_p） Z\_{p-1} 上应用 Pauli 字符串 .。。Z_0 $ on qubits $ 0 ... p $\}索引 $z \in\{0，1 $，$p $。 也就是说，$ $ \begin{align} U\ket {z} \ 票证 {p} \ 票证 {\ psi} = \ket{z}\ket{p} （X ^ {z + 1}\_pY ^ {z}\_p） Z\_{p-1} .。。Z_0\ket {\ psi} \end{align} $ $
+  summary: 一个单一 $U $，它对 $ （X ^ {z + 1}\_pY ^ {z}\_p） z\_{p-1} 应用 Pauli 字符串 .。。在索引 $z \in\{0、1\}$ 和 $p $ 上 Z_0 $ $。 也就是说，$ $ \begin{align} U\ket {z} \ 票证 {p} \ 票证 {\ psi} = \ket{z}\ket{p} （X ^ {z + 1}\_pY ^ {z}\_p） z\_{p-1} .。。Z_0 \ket{\psi} \end{align} $ $
 - uid: microsoft.quantum.chemistry.jordanwigner.preparesingleconfigurationalstatesinglesiteoccupation
   summary: 通过使用 orbitals 来准备试验状态的简单状态
 - uid: microsoft.quantum.chemistry.jordanwigner.preparesparsemulticonfigurationalstate
@@ -38,24 +38,24 @@ operations:
 newtypes:
 - uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerencodingdata
   summary: >-
-    传递C#给 Q # 的数据格式，用于表示 Hamiltonian 模拟的所有信息。
+    从 c # 传递到 Q # 以表示 Hamiltonian 模拟的所有信息的数据格式。
 
     表示的数据的含义取决于接收数据的算法。
 - uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerinputstate
-  summary: '从C#传递到 Q # 以表示初始状态的准备的数据的格式由所表示的数据的含义决定。'
+  summary: '从 c # 传递到 Q # 以表示初始状态准备的数据的格式由所表示的数据的含义决定。'
 - uid: microsoft.quantum.chemistry.jordanwigner.jwoptimizedhterms
   summary: >-
-    从C#传递到 Q # 以表示 Hamiltonian 的术语的数据格式。
+    从 c # 传递到 Q # 以表示 Hamiltonian 的术语的数据格式。
 
     表示的数据的含义取决于接收数据的算法。
 - uid: microsoft.quantum.chemistry.jordanwigner.optimizedbegeneratorsystem
-  summary: 给定整数 `n`，返回术语 `n` `OptimizedBETermIndex` 数据的函数，以及第一个 `Int` 中的字词数以及 `Double`中所有条款系数的绝对值之和。
+  summary: 一个`Int`函数， `OptimizedBETermIndex`它返回给定`n`整数`n`的术语的数据，以及中的字词数和中所有字词系数的绝对值之和`Double`。
 - uid: microsoft.quantum.chemistry.jordanwigner.optimizedbetermindex
   summary: 优化的块编码算法中的术语数据。
 metadata:
-  ms.openlocfilehash: d84c4f8bf74f902cdffc19dc7e489f80c63d7949
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: bbc51f1ca36c81f15f96d0e526eb15bf79922373
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73210927"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82677047"
