--- a/api/qsharp/microsoft.quantum.arithmetic.multiplyandaddbymodularinteger.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.multiplyandaddbymodularinteger.yml
@@ -24,7 +24,7 @@ input:
     isPrimitive: true
     uid: Int
   - name: multiplier
-    summary: 一个量程寄存器，表示其值要添加到 `summand`的每个基础状态标签的无符号整数。
+    summary: 一个量程寄存器，表示其值要添加到的每个基本状态标签的`summand`无符号整数。
     uid: microsoft.quantum.arithmetic.littleendian
   - name: summand
     summary: 一个量程寄存器，表示要用作此操作的目标的无符号整数。
@@ -40,9 +40,9 @@ functors:
 seeAlso:
 - microsoft.quantum.arithmetic.multiplyandaddphasebymodularinteger
 metadata:
-  ms.openlocfilehash: d0f3a28df20b6dd3a353a445bb9a6130e6100f99
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 38efb2840406fc82b7ae24640bec6641f048a5b2
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76871424"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82676755"
