--- a/api/qsharp/microsoft.quantum.arithmetic.squarei.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.squarei.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.arithmetic.squarei
 name: SquareI
 type: operation
 namespace: Microsoft.Quantum.Arithmetic
-summary: 将整数 `xs` 的平方计算为 `result`，该值必须为零。
+summary: 将整数`xs`的平方计算为`result`，其最初必须为零。
 remarks: 使用标准的移位和添加方法计算正方形。 与直向前解决方案节省 $n-$1 qubits，此解决方案先复制 x，然后应用常规乘数，然后撤消复制操作。
 syntax: 'operation SquareI (xs : Microsoft.Quantum.Arithmetic.LittleEndian, result : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
@@ -13,7 +13,7 @@ input:
     summary: 向正方形 $n $ bit 数字（LittleEndian）
     uid: microsoft.quantum.arithmetic.littleendian
   - name: result
-    summary: $ 2n $ bit result （LittleEndian）的状态必须为 $ \ket{0}$ 起初。
+    summary: $ 2n $ bit result （LittleEndian）的状态必须为 $ \ket{0}$ 初始。
     uid: microsoft.quantum.arithmetic.littleendian
 output:
   content: Unit
@@ -24,9 +24,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: ae55cd24a5dad065c010006f01484f7e903e76f6
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: eedc2536da0fd75712929af44f5167d3fc73add3
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73218424"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82676615"
