--- a/api/qsharp/microsoft.quantum.arrays.constantarray.yml
+++ b/api/qsharp/microsoft.quantum.arrays.constantarray.yml
@@ -5,7 +5,7 @@ type: function
 namespace: Microsoft.Quantum.Arrays
 summary: 创建一个给定长度的数组，其中的所有元素都等于给定的值。
 examples: >-
-  下面的代码创建一个3个布尔值的数组，每个数组都等于 `true`：
+  下面的代码创建一个具有3个布尔值的数组，每`true`个数组等于：
 
 
   ```qsharp
@@ -28,14 +28,14 @@ input:
 output:
   content: "'T[]"
   types:
-  - summary: 长度为 `length`的新数组，使每个元素都 `value`。
+  - summary: 一个新的长度`length`数组，使每个元素都`value`是。
     isArray: true
     uid: "'T"
     isLocal: true
 metadata:
-  ms.openlocfilehash: 3eb9380a9bf3c2229b936941d31041ef2adcce06
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: e989c80b27c3ce0d90a564181c0bcae2f892ada0
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77905414"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82676536"
