--- a/api/qsharp/microsoft.quantum.arrays.equala.yml
+++ b/api/qsharp/microsoft.quantum.arrays.equala.yml
@@ -5,7 +5,7 @@ type: function
 namespace: Microsoft.Quantum.Arrays
 summary: 给定两个相同类型的数组和为数组元素对定义的谓词，检查数组是否相等。
 remarks: >-
-  此函数是为泛型类型定义的;也就是说，每当有两个数组 `'T[]` 并且函数 `equal: ('T, 'T) -> Bool`时，此函数将返回一个 `Bool` 值，该值指示数组是否相等。
+  此函数是为泛型类型定义的;也就是说，每当有两个数组`'T[]`和一个函数`equal: ('T, 'T) -> Bool`时，此函数将返回`Bool`一个值，该值指示数组是否相等。
 
   对于两个要视为相等的数组，它们必须具有相等的长度，并且数组中同一位置的元素必须相等。
 examples: >-
@@ -59,18 +59,18 @@ output:
   content: Bool
   types:
   - summary: >-
-      当且仅当 `array1` 和 `array2` 相等时，值 `true`。
+      当且`true`仅当`array1`和`array2`相等时，值为。
 
-      也就是说，如果两个数组具有相同的长度，并且所有元素都与 `equal`定义的相等。
+      也就是说，如果两个数组具有相同的长度，并且所有元素都与定义的相等`equal`。
     isPrimitive: true
     uid: Bool
 typeParameters:
 - uid: "'T"
   summary: 每个数组元素的类型。
 metadata:
-  ms.openlocfilehash: 466078fa243e2f394fa42dff15845ae5f1cd73df
-  ms.sourcegitcommit: a0e50c5f07841b99204c068cf5b5ec8ed087ffea
+  ms.openlocfilehash: d2af5ff8e2d66e6162c73c3854670451a00dcf50
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/26/2020
-  ms.locfileid: "80321600"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82676503"
