--- a/api/qsharp/microsoft.quantum.canon.andladder.yml
+++ b/api/qsharp/microsoft.quantum.canon.andladder.yml
@@ -7,9 +7,9 @@ summary: >-
   在目标 qubits 的寄存器上执行受控的 "AND 阶梯"。
 
 
-  此操作应用以下映射所描述的转换： $ $ \begin{align} \ket{x\_1，\dots ..，x\_n} \ket{y\_1，\dots ..，y\_{n-1}} \mapsto \ket{x\_1，\dots ..，x\_n} \ket{y\_1 \oplus （x\_1 \land x\_2），\dots ..，y\_{n-1} \oplus （x\_1 \land x\_2 \land \cdots \land x\_{n-1}}，\end{align} $ $，其中 $ \ket{x\_1，\dots ..，x\_n} $ 表示 `controls`的计算基础状态，其中 $ \ket{y\_1，\dots ..，y\_{n-1}} $ 表示 `targets`的计算基础状态。
+  此操作应用以下映射中描述的转换： $ $ \begin{align} \ket{x\_1，\dots ..，x\_n} \ket{y\_1，\dots ..，y\_{n-1}} \mapsto \ket{x\_1，\dots ..，x\_n} \ket{y\_1 \oplus （x\_1 \land x\_2） \dots ..，y\_{n-1} \oplus （x\_1 \land x\_2 \land \cdots \land x\_{n-1}}，\end{align} $ $，其中 $ \ket{x\_1，\dots ..，x\_n} $ 表示的计算基础状态`controls`，其中 $ \ket{y\_1，\dots ..，y\_{n-1}} $ 表示计算基础状态。 `targets`
 remarks: >-
-  - 用作 <xref:microsoft.quantum.canon.applymulticontrolledc> 和 <xref:microsoft.quantum.canon.applymulticontrolledca>的一部分。
+  - 用作和<xref:microsoft.quantum.canon.applymulticontrolledc> <xref:microsoft.quantum.canon.applymulticontrolledca>的一部分。
 
   - 有关说明和线路关系图，请参阅图4.10： Nielsen & 语中的第4.3 节。
 syntax: 'operation AndLadder (ccnot : Microsoft.Quantum.Canon.CCNOTop, controls : Qubit[], targets : Qubit[]) : Unit'
@@ -24,14 +24,14 @@ input:
     summary: >-
       要用作和阶梯控件的 qubits 寄存器。
 
-      此操作使计算基础状态 `controls` 固定。
+      此操作使计算基础状态保持`controls`不变。
 
-      `controls` 的长度必须至少为2，并且必须等于 `targets`的长度加1。
+      的`controls`长度必须至少为2，并且必须等于的`targets`长度加1。
     isArray: true
     isPrimitive: true
     uid: Qubit
   - name: targets
-    summary: '`targets` 的长度必须至少为1，并且等于 `controls` 减1的长度。'
+    summary: 的`targets`长度必须至少为1，并且必须等于`controls`减1的长度。
     isArray: true
     isPrimitive: true
     uid: Qubit
@@ -43,9 +43,9 @@ output:
 functors:
 - Adjoint
 metadata:
-  ms.openlocfilehash: bf5b262ca55bea542218356918cf36eb95502967
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 4cc74315145176fd3a2258a3d92b2f2dfb4d66d3
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76871033"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82676392"
