--- a/api/qsharp/microsoft.quantum.canon.applyifelsera.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyifelsera.yml
@@ -7,17 +7,17 @@ summary: >-
   应用两个 adjointable 操作之一，具体取决于古典结果的值。
 
 
-  如果结果为 `result`，当 `result` 等于 `Zero`时，将使用 `zeroInput` 作为其输入的操作 `zeroOp`，并且 `oneOp(oneInput)` 时应用 `result == One`。
+  如果结果`result`为，则在等于`zeroOp` `zeroInput` `result` `Zero`时应用该操作，并应用`oneOp(oneInput)`该操作。 `result == One`
 syntax: "operation ApplyIfElseRA (result : Result, (zeroOp : ('T => Unit is Adj), zeroInput : 'T), (oneOp : ('U => Unit is Adj), oneInput : 'U)) : Unit"
 input:
   content: "(result : Result, (zeroOp : ('T => Unit is Adj), zeroInput : 'T), (oneOp : ('U => Unit is Adj), oneInput : 'U))"
   types:
   - name: result
-    summary: 用于确定是否应用 `zeroOp` 或 `oneOp` 的测量结果。
+    summary: 用于确定是否应用`zeroOp`或`oneOp`的测量结果。
     isPrimitive: true
     uid: Result
   - name: zeroOp
-    summary: '`result == Zero`时要应用的 adjointable 操作。'
+    summary: 在时`result == Zero`要应用的 adjointable 操作。
     isOperation: true
     input:
       types:
@@ -30,11 +30,11 @@ input:
     functors:
     - Adjoint
   - name: zeroInput
-    summary: '`result == Zero`时提供给 `zeroOp` 的输入。'
+    summary: 要提供给`zeroOp`的时间`result == Zero`。
     uid: "'T"
     isLocal: true
   - name: oneOp
-    summary: '`result == One`时要应用的 adjointable 操作。'
+    summary: 在时`result == One`要应用的 adjointable 操作。
     isOperation: true
     input:
       types:
@@ -47,7 +47,7 @@ input:
     functors:
     - Adjoint
   - name: oneInput
-    summary: '`result == One`时提供给 `oneOp` 的输入。'
+    summary: 要提供给`oneOp`的时间`result == One`。
     uid: "'U"
     isLocal: true
 output:
@@ -57,9 +57,9 @@ output:
     uid: Unit
 typeParameters:
 - uid: "'T"
-  summary: 要有条件地应用 `zeroOp` 操作的输入类型。
+  summary: 要有条件地应用的`zeroOp`操作的输入类型。
 - uid: "'U"
-  summary: 要有条件地应用 `oneOp` 操作的输入类型。
+  summary: 要有条件地应用的`oneOp`操作的输入类型。
 functors:
 - Adjoint
 seeAlso:
@@ -69,9 +69,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifelsera
 - microsoft.quantum.canon.applyifelserca
 metadata:
-  ms.openlocfilehash: df838f6eda12db4710ee19cd3c0aeb334935cd22
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 6168a991766f07ec5d0fd0a7685f17d02510e038
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73213902"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82676319"
